fix(usuario-agendamento): Altera o payload de retorno de agendamentos do usuario
